feat: add payment gateway

--- a/.env.example
+++ b/.env.example
@@ -22,6 +22,7 @@ JWT_EXPIRES_IN=1d
 # Stripe
 STRIPE_SECRET_KEY=your_stripe_secret_key
 STRIPE_WEBHOOK_SECRET=your_stripe_webhook_secret
+STRIPE_PUBLISHABLE_KEY=your_stripe_publishable_key
 
 # PayPal
 PAYPAL_CLIENT_ID=your_paypal_client_id
