--- a/package.json
+++ b/package.json
@@ -19,7 +19,12 @@
     "db:migrate:webhook": "ts-node scripts/runMigration.ts 004_webhook_events.sql",
     "db:migrate:subscription": "ts-node scripts/runMigration.ts 002_enhance_subscriptions.sql",
     "db:migrate:plans": "ts-node scripts/runMigration.ts 003_plan_management.sql",
-    "webhook:listen": "stripe listen --forward-to localhost:3000/api/webhooks/stripe"
+    "db:migrate:customers": "ts-node scripts/runMigration.ts 005_customers_table.sql",
+    "db:clean": "ts-node scripts/cleanDatabase.ts",
+    "db:update-stripe-prices": "ts-node scripts/run-after-migrate.ts",
+    "webhook:listen": "stripe listen --forward-to localhost:3000/api/webhooks/stripe",
+    "stripe:create-plans": "node scripts/create-stripe-plans.js",
+    "stripe:get-price": "node scripts/get-stripe-price-id.js"
   },
   "keywords": [
     "payment",
